Bug 10921 - A problem in _cairo_xlib_screen_get_gc() when opening a new child window
Summary: A problem in _cairo_xlib_screen_get_gc() when opening a new child window
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: xlib backend (show other bugs)
Version: 1.4.7
Hardware: SGI IRIX
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-05-11 23:31 UTC by Daichi Kawahata
Modified: 2007-05-12 04:10 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Runtime stack trace log from Sylpheed (39.11 KB, text/plain)
2007-05-11 23:32 UTC, Daichi Kawahata
Details
Runtime stack trace log from Terminal (39.15 KB, text/plain)
2007-05-11 23:33 UTC, Daichi Kawahata
Details
Display information (11.20 KB, text/plain)
2007-05-11 23:34 UTC, Daichi Kawahata
Details
GL/GLX information (5.62 KB, text/plain)
2007-05-11 23:36 UTC, Daichi Kawahata
Details
Xservers file (143 bytes, text/plain)
2007-05-11 23:37 UTC, Daichi Kawahata
Details

Description Daichi Kawahata 2007-05-11 23:31:09 UTC
Hi,

My previous problem (#7294) has gone, but an another recently.
Searching similar reports in this section doesn't show the
right place to report, thus I created a new account.

When I try to open a new child window (like settings window)
from a main window already opened in a certain applications
(in this case Sylpheed, Terminal), Cairo causes a segfault
against them.

It's the latest version 1.4.7 from the git repository with;

IRIX64 6.5.30m
GCC    3.4.6 (-O2 -g -W -Wall -Wformat=2 -mips4)
GTK+   2.11.0
GLib   2.13.2
Pango  1.16.4

I'll submit the logs later.

Thanks,
Comment 1 Daichi Kawahata 2007-05-11 23:32:35 UTC
Created attachment 9936 [details]
Runtime stack trace log from Sylpheed
Comment 2 Daichi Kawahata 2007-05-11 23:33:47 UTC
Created attachment 9937 [details]
Runtime stack trace log from Terminal
Comment 3 Daichi Kawahata 2007-05-11 23:34:51 UTC
Created attachment 9938 [details]
Display information
Comment 4 Daichi Kawahata 2007-05-11 23:36:16 UTC
Created attachment 9939 [details]
GL/GLX information
Comment 5 Daichi Kawahata 2007-05-11 23:37:08 UTC
Created attachment 9940 [details]
Xservers file
Comment 6 Chris Wilson 2007-05-12 02:14:28 UTC
Thanks for the report, a clumsy mistake on my part.

commit 7802de6d5edaf998c98b141870dc2c6b4c0f3e91
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat May 12 10:10:49 2007 +0100

    [cairo-xlib-screen] Clear the gc_needs_clip_reset after use.
    
    After consuming the GC we need to unset the clip reset flag, so that
    if we try and get a new GC without first putting a fresh one we do not
    try to call XSetClipMask on a NULL GC.
    
    (Fixes http://bugs.freedesktop.org/show_bug.cgi?id=10921)

Comment 7 Daichi Kawahata 2007-05-12 03:02:29 UTC
Confirmed that the problem has gone.

Thanks,


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.