[cairo-xlib-screen] Clear the gc_needs_clip_reset after use.

After consuming the GC we need to unset the clip reset flag, so that
if we try and get a new GC without first putting a fresh one we do not
try to call XSetClipMask on a NULL GC.

(Fixes http://bugs.freedesktop.org/show_bug.cgi?id=10921)